--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="content">
         <header>Sohbetler</header>
         <p><strong>Yazar:</strong> Ali Veli</p>
+        <p><strong>Yayınlanma Tarihi:</strong> 6 Ağustos 2025</p>
+        <p><strong>Son Güncelleme:</strong> 6 Ağustos 2025</p>
         <h2>Giriş</h2>
         <p>Bu kitapta çeşitli konular üzerine sohbetler yer alır.</p>
     </div>
